Fix PDF: Add peak ORDER to fix summary display, remove avoid break in TOC list to see if fixes blank page

--- a/apps/pdfexport/static/pdfexport/finalreport.css
+++ b/apps/pdfexport/static/pdfexport/finalreport.css
@@ -210,8 +210,6 @@ tr, th, td {
 .toc-list li {
   display: block;
   margin: 6pt 0;
-  page-break-inside: avoid;
-  break-inside: avoid;
 }
 
 .toc-list a { 
@@ -501,7 +499,7 @@ tr, th, td {
     background-color: var(--bg-accent);
     border-left: 4px solid var(--primary);
     padding: 30px;
-    margin-top: 1rem;
+    margin-top: 30px;
     font-size: 10.5pt;
     color: var(--text-light);
 }
